fixed css spacing

--- a/src/index.css
+++ b/src/index.css
@@ -46,18 +46,22 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'poiret one', sans-serif;
+
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 4rem;
+  padding: 15px;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 3rem;
+  font-family: "poiret one";
+
 }
 
 h3 {
@@ -73,19 +77,22 @@ h5 {
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 3rem;
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 2rem;
   margin-top: 0;
   color: #8c54ff;
+  padding-top: 10px;
 }
 
 a {
   color: var(--tertiary);
   text-decoration: none;
   font-weight: bold;
+  font-family: "poiret one";
+
 }
 
 a:hover {
@@ -94,6 +101,18 @@ a:hover {
 
 header {
   background: var(--dark);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footerKareem {
+ margin-top: 14px;
 }
 
 header a {
@@ -315,5 +334,26 @@ a {
 
 .icon {
   color: white;
+  size: 40px;
+
+}
+
+.pro {
+  border: 2px solid #8c54ff;
+  border-radius: 30px;
+  padding: 20px;
+}
+
+.ulSty {
+  float: right;
+}
+
+#kareem {
+  font-family: "poiret one";
+}
+
+.navbar-nav  {
+        float: right;
+        margin-top: 9px;
 
 }
